--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="converter">
-        <h2>Konverter Suhu</h2>
-        <p>Selamat datang di Tempy! Konversi suhu jadi lebih mudah dan cepat. Ubah Celsius, Fahrenheit, dan Kelvin hanya dalam satu klik!"</p>
+        <h1>Temperature Converter</h1>
 
         <label for="fromUnit">From:</label>
         <select id="fromUnit">
@@ -31,6 +30,9 @@
 
         <label for="result">Result</label>
         <input type="text" id="result" readonly>
+
+        <label for="explanation">Explanation</label>
+        <p id="explanation"></p>
     </div>
 
     <script src="js\script.js"></script>
