--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css\style.css">
-    <title>Tempy</title>
+    <title>TempSwift</title>
 </head>
 <body>
     <div class="MainPage">
-        <h1>Temperature Converter</h1>
+        <h1>TEMPSWIFT</h1>
 
         <div class="content">
             <label for="fromUnit">From:</label>
@@ -29,6 +29,8 @@
         <label for="temperature" class="result">Temperature</label>
         <input type="number" id="temperature" placeholder="input Temperature" class="result-bar">
         
+        <p id="validationMessage" style="color: red;"></p>
+
         <label for="result" class="result">Result</label>
         <input type="text" id="result" readonly class="result-bar">
 
